Email Attachments
- Rewrote the search handling
- Allows for more robust searching
